--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-::after, ::before {
+*,::after, ::before {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -49,4 +49,32 @@ body {
     padding-left: 16px;
     margin-bottom: 16px;
     font-size: 16px;
+}
+
+.form-box input[name=subject] {
+    width: 100%;
+}
+
+.form-box textarea {
+    width: 100%;
+    height: 180px;
+    padding: 16px;
+}
+
+.form-box button {
+    display: block;
+    border: none;
+    outline: none;
+    width: 180px;
+    height: 48px;
+    border-radius: 8px;
+    background-color: purple;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.form-box button:hover {
+    background-color: purple;
 }
